# the_silver_searcher

./: .clang-format  .gitignore  .settings  .travis.yml  404.html  CMakeLists.txt  CNAME  CONTRIBUTING.md  Files.mak  Makefile.am  Makefile.w32  NMakefile  NOTICE  README.md  _the_silver_searcher  ag.bashcomp.sh  ag.el  appveyor.yml  autogen.sh  build.sh  clean.sh  config.h.in  configure.ac  configure.ag.bat  format.sh  index.html  newFile  notes.txt  pgo.sh  sanitize.sh  style.css  the_silver_searcher.spec  the_silver_searcher.spec.in  𝒜wesome.txt
.c9revisions/src/: main.c.c9save
completions/bash/: ag
completions/zsh/: _ag
contrib/: collect_defines.py
doc/: ag.1  ag.1.md  generate_man.sh
msc_libs/: Files.mak  README.md  make.bat
msc_libs/MsvcLibX/: Files.mak  README.md  configure.bat  make.bat
msc_libs/MsvcLibX/include/: dirent.h  fcntl.h  fnmatch.h  iconv.h  inttypes.h  libgen.h  limits.h  msvclibx.h  msvclibx_version.h  netdb.h  process.h  regex.h  reparsept.h  stdio--.h  stdio.h  stdlib.h  string.h  system.h  unistd.h  utime.h  windows.h
msc_libs/MsvcLibX/src/: Files.mak  GetFileAttributes.c  GetFileAttributesEx.c  GetFullPathName.c  GetLongPathName.c  NMakefile  access.c  chdir.c  configure.MsvcLibX.bat  debugv.c  dirent.c  dirname.c  err2errno.c  exe  fnmatch.c  fopen.c  fstat.c  fullpath.c  fwrite.c  getcwd.c  getopt.c  gettimeofday.c  iconv.c  lstat.c  lstat32.c  lstat32i64.c  lstat64.c  lstat64i32.c  main.c  make.bat  mb2wpath.c  mkdir.c  mkdtemp.c  open.c  readlink.c  realpath.c  rmdir.c  spawn.c  strerror.c  strptime.c  (+6 more)
msc_libs/include/: All.mak  bios.mak  configure.bat  debugm.h  dos.mak  make.bat  src2objs.mak  win32.mak  win64.mak  win95.mak
msc_libs/pcre/: CMakeLists.txt  ChangeLog  Files.mak  Makefile.in  NEWS  aclocal.m4  config.h.MsvcLibX  config.h.generic  configure.bat  make.bat  pcre_chartables.c.utf8  pcre_jit_compile.c  pcregrep.c  pcretest.c
msc_libs/pcre/doc/: index.html.src  pcre-config.txt  pcre.txt  pcre_copy_named_substring.3  pcre_copy_substring.3  pcre_free_study.3  pcre_free_substring.3  pcre_get_stringnumber.3  pcre_get_stringtable_entries.3  pcre_jit_stack_free.3  pcre_maketables.3  pcre_utf16_to_host_byte_order.3  pcrecallout.3  pcregrep.1  pcregrep.txt  pcreprecompile.3  pcresample.3  pcrestack.3  pcresyntax.3  pcretest.1
msc_libs/pcre/sljit/: sljitLir.c  sljitLir.h  sljitNativeARM_32.c  sljitNativeMIPS_common.c  (+5 more)
msc_libs/pthread/: ChangeLog  FAQ  Files.mak  GNUmakefile.in  Makefile  NEWS  README  README.CV  README.NONPORTABLE  autostatic.c  builddmc.bat  cleanup.c  condvar.c  config.h  configure.ac  configure.pthread.bat  context.h  create.c  dll.c  errno.c  global.c  implement.h  make.bat  misc.c  mutex.c  need_errno.h  nonportable.c  private.c  pthread.c  pthread.h  pthread.mak  pthread_attr_destroy.c  pthread_attr_getaffinity_np.c  pthread_attr_getdetachstate.c  pthread_attr_getinheritsched.c  pthread_attr_getname_np.c  pthread_attr_getschedparam.c  pthread_attr_getschedpolicy.c  pthread_attr_getscope.c  pthread_attr_getstacksize.c  (+86 more)
msc_libs/zlib/: zlib.mak
rust/: Cargo.toml  build.rs  wrapper.h
rust/src/: bindings.rs  file_types.rs  helpers.rs  ignore.rs  lib.rs
src/: Files.mak  ag.mak  ag_rc.c  ag_rc.h  alloclist.c  alloclist.h  compat-util.h  config.h.MsvcLibX  configure.msc_libs.bat  configure.win32.bat  ctypes.c  decompress.c  decompress.h  hex.c  ignore.c  ignore.h  iscygpty.c  lang.c  lang.h  log.c  log.h  main.c  mgi.c  mgi.h  options.c  options.h  osdep.c  osdep.h  pcre_api.c  pcre_api.h  print.c  print.h  print_w32.c  scandir.c  scandir.h  search.c  search.h  uthash.h  util.c  util.h  (+4 more)
src/git-compat/: cache.h  git-compat-util.h  hex.c  wildmatch.c  wildmatch.h
src/win32/: config.h  win_colors.c  win_colors.h
tests/: adjacent_matches.t  agrc.t  all_files.t  bad_path.t  case_sensitivity.t  color.t  column.t  contain_slash.t  count.t  ds_store_ignore.t  empty_environment.t  empty_match.t  environment.t  exitcodes.t  filename-match.t  files-without-matches.t  files_from.t  files_with_matches.t  files_without_matches.t  filetype.t  gitignore_double_star.t  gitignore_parent.t  gitignore_star.t  gitignore_subdir.t  gitignore_unignore.t  hidden_option.t  ignore.t  ignore_abs_path.t  ignore_absolute_search_path_with_glob.t  ignore_backups.t  ignore_bzrignore.t  ignore_dont_invert_if_whole_directory_is_excluded.t  ignore_examine_parent_ignorefiles.t  ignore_extensions.t  ignore_gitignore.t  ignore_gitignore_wildcard.t  ignore_glob.t  ignore_glob_absolute_multipart.t  ignore_invert.t  ignore_invert_subdirs.t  (+53 more)
tests/big/: big_file.t  big_file_compressed.t  create_big_file.py  create_big_file_compressed.py
tests/fail/: unicode_case_insensitive.t  unicode_case_insensitive.t.err
tests/speed/: speed.t
tests/zip/: zip_file.t  zip_folder.t  zip_recursive.t
win32/: Files.mak  README.md  appveyor.bat
win32/MsvcLibX/: Files.mak  README.md
win32/include/: All.mak  GetDefs.bat  README.md  arm.mak  arm64.mak  bios.mak  configure.bat  debugm.h  dos.mak  lib2libs.bat  lib2libs.mak  make.bat  src2objs.bat  src2objs.mak  stversion.h  versions.h  win32.mak  win64.mak  win95.mak
win32/pcre/: AUTHORS  CMakeLists.txt  ChangeLog  LICENCE  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.MsvcLibX  config.h.generic  config.sub  configure  configure.ac  dftables.mak  ltmain.sh  pcre.h.generic  pcre.mak  pcre_compile.c  pcre_jit_compile.c  pcrecpp.cc  pcrecpp_unittest.cc  pcregrep.c  pcreposix.c  pcretest.c
win32/pthread/: .gitignore  ANNOUNCE  BUGS  Bmakefile  CONTRIBUTORS  COPYING  ChangeLog  FAQ  Files.mak  GNUmakefile.in  MAINTAINERS  Makefile  NEWS  NOTICE  Nmakefile  PROGRESS  README  README.CV  README.NONPORTABLE  TODO  WinCE-PORT  _ptw32.h  aclocal.m4  cleanup.c  common.mk  config.h  configure.ac  configure.bat  configure.pthread.bat  context.h  create.c  dll.c  errno.c  global.c  implement.h  need_errno.h  pthread.c  pthread.mak  pthread_attr_destroy.c  pthread_attr_getaffinity_np.c  (+140 more)
win32/winget/: README.md  ag.yaml  setup.bat
win32/zlib/: Files.mak  configure.zlib.bat  gzguts.h  make.bat  zutil.h
(+219 files in other folders)
