[package]
name = "rust"
version = "0.1.0"
authors = ["Philip Koslowski <philip.koslowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = "0.54.1"

[lib]
name = "rust_internals"
crate-type = ["staticlib"]
